test/parse/module/bad-table-invalid-function.txt
;;; ERROR: 1
(module
  (table 1 anyfunc)
  (func $f)
  (elem (i32.const 0) $f 1))
(;; STDERR ;;;
out/test/parse/module/bad-table-invalid-function.txt:5:26: error: function variable out of range (max 1)
  (elem (i32.const 0) $f 1))
                         ^
;;; STDERR ;;)
